--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script id="hydro_config" type="text/javascript">
+      window.Hydro_tagId = "c0980706-0a2b-4395-abe2-d6342968a7bc";
+    </script>
+    <script id="hydro_script" src="https://qa-track.hydro.online/"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
