--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script id="hydro_config" type="text/javascript">
-      window.Hydro_tagId = "c0980706-0a2b-4395-abe2-d6342968a7bc";
+      window.Hydro_tagId = "9c654316-a103-49a4-86a6-3659a7599478";
     </script>
-    <script id="hydro_script" src="https://qa-track.hydro.online/"></script>
+    <script id="hydro_script" src="https://pre-prod-track.hydro.online/"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
